tests/type/infer_bool.rz
var a = true
a = 3 // error: trying to assign value of type 'int' to variable of type 'bool'